Attempting to fix layout problems

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,9 @@ border-radius: 5px;
 border-width: 2px;
 width: 50%;
 padding: 10px;
-position: absolute;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 #comicContainer {
   display: flex;
